--- a/accounts/templates/underreview.html
+++ b/accounts/templates/underreview.html
@@ -38,7 +38,7 @@
                     <td>It Seems to be Real</td>
                     {% endif %}
                     <td>
-                      <form method="post" action="" id="{{ item.review_id }}" class="form-group">
+                      <form method="post" action="" id="{{ item.review_id }}" class="form-group" enctype="multipart/form-data">
                         {% csrf_token %}
                         <input type="hidden" name="review_id" value="{{ item.review_id }}" />
                         <select name="status" id="status" class="form-select">
