--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -34,7 +34,7 @@
               <h3><strong>Login</strong></h3>
               <!-- <p class="mb-4">Lorem ipsum dolor sit amet elit. Sapiente sit aut eos consectetur adipisicing.</p> -->
               </div>
-              <form action="#" method="post">
+              <form action="#" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="form-group first">
                   <label for="username">Username</label>
