--- a/accounts/templates/layout.html
+++ b/accounts/templates/layout.html
@@ -41,7 +41,7 @@
                     </li>
                     <h3 class="menu-title">Reviews</h3><!-- /.menu-title -->
                     <li class="menu-item-has-children dropdown">
-                        <a href="{% url 'publishedreview' %}" class="dropdown-toggle"> <i class="menu-icon fa fa-laptop"></i>Publised Reviews</a>
+                        <a href="{% url 'publishedreview' %}" class="dropdown-toggle"> <i class="menu-icon fa fa-laptop"></i>Published Reviews</a>
                     </li>
                     <li class="menu-item-has-children active dropdown">
                         <a href="{% url 'underreview' %}" class="dropdown-toggle" > <i class="menu-icon fa fa-table"></i>Under Reviews</a>
