--- a/accounts/templates/Register.html
+++ b/accounts/templates/Register.html
@@ -18,7 +18,7 @@
     <!-- Style -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    <title>Login</title>
+    <title>Register</title>
   </head>
   <body>
   
