--- a/accounts/templates/layout.html
+++ b/accounts/templates/layout.html
@@ -31,7 +31,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a href="index.html"><img src="{% static 'images/logo3.png' %}" alt="#" /></a>
+                <a href="{% url 'admindashboard' %}"><img src="{% static 'images/logo3.png' %}" alt="#" /></a>
             </div>
 
             <div id="main-menu" class="main-menu collapse navbar-collapse">
