--- a/accounts/templates/rejectedreview.html
+++ b/accounts/templates/rejectedreview.html
@@ -6,7 +6,7 @@
       <div class="col-md-12">
         <div class="card">
           <div class="card-header">
-            <strong class="card-title">Under Review Reviews</strong>
+            <strong class="card-title">Rejected Reviews</strong>
           </div>
           <div class="card-body">
             <table id="bootstrap-data-table-export" class="table table-striped table-bordered table-responsive-sm text-center">
